=================
Changes for crate
=================

Unreleased
==========

- BREAKING: Dropped support for Python 2.7 and 3.3
  If you are using crate with Python 2.7 or 3.3 already, you will not be able
  to install newer versions of this package.

- Updated ``get_table_names()`` method in SqlAlchemy dialect to only return
  tables but not views.

- Added configuration for the sphinx_sitemap extension which allows to
  create a sitemap.xml from the documentation.

2018/03/14 0.21.3
=================

- Fixed an issue that caused ``metadata.create_all(bind=engine)`` to fail
  creating tables that contain an ``ObjectArray`` column.

2018/02/15 0.21.2
=================

- BREAKING: In the testing layer, the custom setting of
  `cluster.routing.allocation.disk.watermark.low` (1b) and
  `cluster.routing.allocation.disk.watermark.high` (1b) has been removed.
  These now default to 85% and 90%, respectively.

2018/01/03 0.21.1
=================

- Fixed an issue that prevented the usage of SQLAlchemy types ``NUMERIC`` and
  ``DECIMAL`` as column types.

2017/12/07 0.21.0
=================

- Added new parameter ``password`` used to authenticate the user in CrateDB.

- Prepared SQL Alchemy primary key retrieval for CrateDB 2.3.0. Preserved
  backwards-compatibility for lower versions.

2017/08/18 0.20.1
=================

- Fixed deprecation warnings logged in CrateDB server on every REST request.

2017/06/26 0.20.0
=================

- Added new parameter ``username`` used to authenticate the user in CrateDB.

2017/06/23 0.19.5
=================

- Enforced cert check when verify_ssl_cert=True

2017/06/20 0.19.4
=================

- Testing: Fixed issue that caused the test layer to hang after it failed to
  start a CrateDB instance in time.

2017/05/18 0.19.3
=================

- Fix bulk updates which were broken due to query rewrites.


2017/04/28 0.19.2
=================

- Output logs in test-layer in case when CrateDB instance does not start in
  time.
