@@ -21,6 +21,7 @@
 
 import json
 import time
+import socket
 import multiprocessing
 import sys
 import os
@@ -414,7 +415,6 @@ class ParamsTest(TestCase):
 
 class RequestsCaBundleTest(TestCase):
 
-
     def test_open_client(self):
         os.environ["REQUESTS_CA_BUNDLE"] = CA_CERT_PATH
         try:
@@ -436,15 +436,17 @@ class RequestsCaBundleTest(TestCase):
         self.assertTrue('foobar' in d)
 
 
-class RetryRequestHandler(BaseHTTPRequestHandler):
+class SharedStateRequestHandler(BaseHTTPRequestHandler):
     """
-    http handler for use with HTTPServer
-
-    counts request made
+    HTTP handler for use with TestingHTTPServer
+    sets the shared state of the server and returns an empty response
     """
 
     def do_POST(self):
+        print('POST /_sql')
+        print(self.headers)
         self.server.SHARED['count'] += 1
+        self.server.SHARED['schema'] = self.headers.get('Default-Schema')
 
         if self.headers.get('Authorization') is not None:
             credentials = b64decode(self.headers['Authorization'].replace('Basic ','')).decode('utf-8').split(":", 1)
@@ -461,6 +463,14 @@ class RetryRequestHandler(BaseHTTPRequestHandler):
         else:
             self.server.SHARED['usernameFromXUser'] = None
 
+        # send empty response
+        response = '{}'
+        self.send_response(200)
+        self.send_header("Content-Length", len(response))
+        self.send_header("Content-Type", "application/json; charset=UTF-8")
+        self.end_headers()
+        self.wfile.write(response.encode('utf-8'))
+
 
 class TestingHTTPServer(HTTPServer):
     """
@@ -472,79 +482,105 @@ class TestingHTTPServer(HTTPServer):
     SHARED['usernameFromXUser'] = None
     SHARED['username'] = None
     SHARED['password'] = None
+    SHARED['schema'] = None
 
     @classmethod
-    def run_server(cls, server_address):
-        cls(server_address, RetryRequestHandler).serve_forever()
+    def run_server(cls, server_address, request_handler_cls):
+        cls(server_address, request_handler_cls).serve_forever()
 
 
-class RetryOnTimeoutServerTest(TestCase):
+class TestingHttpServerTestCase(TestCase):
 
-    server_address = ("127.0.0.1", 65535)
+    request_handler = SharedStateRequestHandler
 
     def __init__(self, *args, **kwargs):
-        super(RetryOnTimeoutServerTest, self).__init__(*args, **kwargs)
-        self.server_process = Process(target=TestingHTTPServer.run_server, args=(self.server_address,))
+        super().__init__(*args, **kwargs)
+        self.assertIsNotNone(self.request_handler)
+        self.server_address = ('127.0.0.1', random.randint(65000, 65535))
+        self.server_process = Process(target=TestingHTTPServer.run_server,
+                                      args=(self.server_address, self.request_handler))
 
     def setUp(self):
-        self.client = Client(["%s:%d" % self.server_address], timeout=5)
         self.server_process.start()
-        time.sleep(.10)
+        self.wait_for_server()
+
+    def wait_for_server(self):
+        print('')
+        while True:
+            print('Waiting for ', self.server_address)
+            try:
+                with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
+                    s.connect(self.server_address)
+            except:
+                time.sleep(.25)
+            else:
+                print('Connected to', self.server_address)
+                break
 
     def tearDown(self):
         self.server_process.terminate()
+
+    def clientWithKwargs(self, **kwargs):
+        return Client(["%s:%d" % self.server_address], timeout=5, **kwargs)
+
+
+class RetryOnTimeoutServerTest(TestingHttpServerTestCase):
+
+    def setUp(self):
+        super().setUp()
+        self.client = self.clientWithKwargs()
+
+    def tearDown(self):
+        super().tearDown()
         self.client.close()
 
     def test_no_retry_on_read_timeout(self):
-        try:
-            self.client.sql("select * from fake")
-        except ConnectionError:
-            pass
+        self.client.sql("select * from fake")
         self.assertEqual(TestingHTTPServer.SHARED['count'], 1)
 
 
-class TestUsernameSentAsHeader(TestCase):
-
-    server_address = ("127.0.0.1", 62535)
-
-    def __init__(self, *args, **kwargs):
-        super(TestUsernameSentAsHeader, self).__init__(*args, **kwargs)
-        self.server_process = Process(target=TestingHTTPServer.run_server, args=(self.server_address,))
+class TestDefaultSchemaHeader(TestingHttpServerTestCase):
 
     def setUp(self):
-        self.clientWithoutUsername = Client(["%s:%d" % self.server_address], timeout=5)
-        self.clientWithUsername = Client(["%s:%d" % self.server_address], timeout=5, username='testDBUser')
-        self.clientWithUsernameAndPassword = Client(["%s:%d" % self.server_address], timeout=5,
-                                                    username='testDBUser', password='test:password')
-        self.server_process.start()
-        time.sleep(.10)
+        super().setUp()
+        self.client = self.clientWithKwargs(schema='my_custom_schema')
 
     def tearDown(self):
-        self.server_process.terminate()
+        super().tearDown()
+        self.client.close()
+
+    def test_default_schema(self):
+        self.client.sql('SELECT 1')
+        self.assertEqual(TestingHTTPServer.SHARED['schema'], 'my_custom_schema')
+
+
+class TestUsernameSentAsHeader(TestingHttpServerTestCase):
+
+    def setUp(self):
+        super().setUp()
+        self.clientWithoutUsername = self.clientWithKwargs()
+        self.clientWithUsername = self.clientWithKwargs(username='testDBUser')
+        self.clientWithUsernameAndPassword = self.clientWithKwargs(username='testDBUser',
+                                                                   password='test:password')
+
+    def tearDown(self):
         self.clientWithoutUsername.close()
         self.clientWithUsername.close()
+        self.clientWithUsernameAndPassword.close()
+        super().tearDown()
 
     def test_username(self):
-        try:
-            self.clientWithoutUsername.sql("select * from fake")
-        except ConnectionError:
-            pass
+        self.clientWithoutUsername.sql("select * from fake")
         self.assertEqual(TestingHTTPServer.SHARED['usernameFromXUser'], None)
         self.assertEqual(TestingHTTPServer.SHARED['username'], None)
         self.assertEqual(TestingHTTPServer.SHARED['password'], None)
 
-        try:
-            self.clientWithUsername.sql("select * from fake")
-        except ConnectionError:
-            pass
+        self.clientWithUsername.sql("select * from fake")
         self.assertEqual(TestingHTTPServer.SHARED['usernameFromXUser'], 'testDBUser')
         self.assertEqual(TestingHTTPServer.SHARED['username'], 'testDBUser')
         self.assertEqual(TestingHTTPServer.SHARED['password'], None)
 
-        try:
-            self.clientWithUsernameAndPassword.sql("select * from fake")
-        except ConnectionError:
-            pass
+        self.clientWithUsernameAndPassword.sql("select * from fake")
         self.assertEqual(TestingHTTPServer.SHARED['usernameFromXUser'], 'testDBUser')
         self.assertEqual(TestingHTTPServer.SHARED['username'], 'testDBUser')
         self.assertEqual(TestingHTTPServer.SHARED['password'], 'test:password')
